# cyber-sec-ml-dl-study

./: .gitignore  CLAUDE.md
01-honest-nids/: .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  requirements.txt
01-honest-nids/.codex/memory/: README.md  current-context.md  decisions.md  index.md
01-honest-nids/data/: README.md  checksums.sha256
01-honest-nids/notebooks/: 01_optimistic_baseline.py  02_ip_ablation.py  03_honest_temporal_split.py  04_lodo_cross_dataset.py  README.md
01-honest-nids/reports/: data-prep-v3.md  findings.md  model-selection-decision.md  related-work-perspectives.md
01-honest-nids/results/: experiments.csv  experiments_v2_archive.csv  ip_ablation.csv  model_scan.csv  size_audit.csv
01-honest-nids/scripts/: run_ip_ablation.py  run_lodo.py  run_model_scan.py  run_size_audit.py
01-honest-nids/src/: data.py  evaluation.py  feature_engineering.py  models.py
01-honest-nids/src/tests/: conftest.py  test_data.py  test_evaluation.py  test_feature_engineering.py
04-aml-gnn/: .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  pytest.ini  requirements.txt
04-aml-gnn/data/: README.md  checksums.sha256
04-aml-gnn/notebooks/: 01_eda.py  02_transaction_baseline.py  03_nongnn_baselines.py  04_actor_projection.py  05_aggregation_fanout.py  06_native_actor_model.py  07_tx_graph_gnn.py  08_address_graph_eda.py  09_address_graph_gnn.py  10_tabpfn_foundation_model.py  13_selective_labeling_reject_inference.py  conftest.py
04-aml-gnn/reports/: address-graph-gnn-does-graph-help.md  aggregation-fanout-granularity.md  native-actor-vs-projection.md  setting-c-unknown-not-benign.md  tabpfn-foundation-model.md  tx-graph-gnn-does-graph-help.md
04-aml-gnn/results/: experiments.csv
04-aml-gnn/scripts/: build_node2vec.py
04-aml-gnn/src/: data.py  evaluation.py  projection.py
04-aml-gnn/src/tests/: test_data_eval.py  test_projection.py
05-ithuriel/: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
05-ithuriel/docs/: Cyber+AI_安全+合规Agent项目规划草案.md  D8_架构接缝与规划编码边界_讨论笔记.md  DESIGN.en.md  DESIGN.md  Ithuriel_架构框图_v1_审阅结论.md  Project_Memory.md  Story-to-Probe与LLM后端能力边界_讨论备忘录.md  UK_Region_Profile_v0.2.yaml  architecture-seams-D8.md  ontology_schema.yaml  review-brief-for-partner-agent.md
05-ithuriel/docs/adr/: 0001-agentdojo-fixture-findings.md  0002-first-real-run-deepseek-target-robustness.md  0003-injectable-target-and-first-assertable-defense-delta.md  0004-first-structured-finding-differentiator-layer.md  0005-session-layer-multi-run-mixed-fidelity.md  0006-tradeoff-class-security-utility-closure.md  0007-provenance-pinning-protocol-reproducible.md  0008-control-registry-standards-half.md  0009-partner-review-honest-gate-closures.md  0010-partner-review-two-arm-provenance.md  0011-d8-v1-baseline-cross-domain-provisional.md  0012-slice2-deterministic-config-inspection.md  0013-slice3-active-probe-executor-pep.md  0014-bucketB-coverage-ledger.md  0021-ce-area-rollup-axis.md  (+7 more)
05-ithuriel/reports/: partner-review-2026-07-12.md  partner-review-2026-07-22-codex.md  partner-review-2026-07-24.md
05-ithuriel/results/: experiments.csv
05-ithuriel/scripts/: gen_agentdojo_fixture.py  run_bare_vs_defended.py  run_calendar_probe.py
(+129 files in other folders)
