[project]
name = "honest-nids"
version = "0.1.0"
description = "项目一 01-honest-nids：IP/重复流泄漏 + LODO 的诚实 NIDS 评估（NF3-v3）"
requires-python = ">=3.13"
# 依赖意图见此表；requirements.txt 保留为人读安装说明，uv.lock 钉死复现版本。
dependencies = [
    "pandas>=2.0",
    "numpy>=2.0",        # 本项目无 gensim，走 numpy 2.x（实测 2.4.6）
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "shap>=0.44",
    "matplotlib>=3.7",
    "pyarrow>=14.0",     # 读 NetFlow-v2 parquet/csv
    "jupyterlab>=4.0",
    "marimo>=0.23",
    "duckdb>=1.5",
    "pytest>=8.0",
]

[tool.uv]
package = false          # 应用型仓库，非可安装库；只锁环境
