[project]
name = "aml-gnn"
version = "0.1.0"
description = "项目四 04-aml-gnn：AML 图/表格——标签口径 vs scoring granularity"
requires-python = ">=3.13"
# 依赖意图见此表；requirements.txt 保留为人读安装说明，uv.lock 钉死复现版本。
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26,<2",       # 随 gensim 约束钉 <2（与 shap0.52 需 numpy>=2 冲突）；实测 1.26.4
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "shap>=0.44",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    "marimo>=0.23",
    "pytest>=8.0",
    "gdown>=5.0",           # 从 Google Drive 拉 Elliptic++
    "pecanpy>=2.0",         # node2vec 嵌入（非 GNN 对照）
    "gensim>=4.3",          # pecanpy 的 word2vec 后端（钉 numpy<2）
    "torch>=2.2",           # CPU-only wheel（见 [tool.uv.sources]）；本机无 GPU，实测 2.12.1+cpu
    "torch-geometric>=2.5", # GraphSAGE/GCN；地址图全图训练留云主机
    "tabpfn==2.2.0",        # 锁开放版（Nature 2025 TabPFN v2）；新版权重进 license 墙
]

[tool.uv]
package = false            # 应用型仓库，非可安装库；只锁环境

# CPU-only torch：从 PyTorch 官方 CPU 索引取 wheel，避开 CUDA 栈（原埋在 requirements.txt 注释里）
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
